--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>Alec Li</title>
   <link href="favicon.ico" rel="icon"/>
 
@@ -25,14 +26,18 @@
   <script async src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand navbar-dark bg-dark sticky-top">
-  <div class="container-sm">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+  <div class="container-sm container-scale">
     <a class="navbar-brand">
       <img class="nav-icon" alt="Phi" data-fallback-filetype="png" src="assets/img/Phi-icon.webp"/>
       <span class="nav-text">Alec Li</span>
     </a>
-    <div class="float-right">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 flex-row">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-right"
+            aria-controls="navbar-right" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div id="navbar-right" class="collapse navbar-collapse ms-auto">
+      <ul class="navbar-nav ms-auto mb-0 mb-sm-2">
         <li class="nav-item">
           <a class="nav-link active">Home</a>
         </li>
@@ -52,19 +57,26 @@
   </div>
 </nav>
 
-<main class="container-sm">
-  <div id="intro-div" class="container-fluid d-flex flex-row align-items-center mx-auto justify-content-center">
+<main class="container-sm container-scale">
+  <div id="intro-div" class="container-fluid flex-row align-items-center mx-auto justify-content-center">
     <div id="intro-left">
-      <img id="img-headshot" alt="Alec Li" data-fallback-filetype="jpg" src="assets/img/AlecLi.webp"/>
+      <img id="img-headshot" class="d-block mx-auto" alt="Alec Li" data-fallback-filetype="jpg"
+           src="assets/img/AlecLi.webp"/>
       <div id="intro-links">
         <a class="text-decoration-none" href="https://www.linkedin.com/in/alec-li-84745b168/" target="_blank">
-          <img class="intro-link" alt="LinkedIn" data-fallback-filetype="png" src="assets/img/LI-In-Bug.webp"/>
+          <img class="intro-link" alt="LinkedIn Profile" aria-label="LinkedIn Profile Link"
+               data-fallback-filetype="png" src="assets/img/LI-In-Bug.webp"
+               title="LinkedIn Profile"/>
         </a>
         <a class="text-decoration-none" href="https://github.com/smartspot2" target="_blank">
-          <img class="intro-link" alt="GitHub" data-fallback-filetype="png" src="assets/img/GitHub-Mark-32px.webp"/>
+          <img class="intro-link" alt="GitHub Profile" aria-label="GitHub Profile Link"
+               data-fallback-filetype="png" src="assets/img/GitHub-Mark-32px.webp"
+               title="GitHub Profile"/>
         </a>
         <a id="intro-email-link" class="text-decoration-none">
-          <img class="intro-link" alt="Email" src="assets/img/envelope.svg"/>
+          <img class="intro-link" alt="Email Address"
+               aria-label="Copy Personal Email Address" src="assets/img/envelope.svg"
+               title="Personal Email"/>
         </a>
       </div>
     </div>
@@ -77,7 +89,7 @@
 
   <h3>Projects</h3>
 
-  <div id="projects" data-masonry='{ "itemSelector": ".project-card"}'>
+  <div id="projects" data-masonry='{"itemSelector": ".project-card"}'>
     <div class="card project-card">
       <div class="card-header d-flex flex-row align-items-center">
         <a class="text-decoration-none project-card-title"
@@ -86,11 +98,15 @@
         </a>
         <a class="github-link"
            href="https://github.com/smartspot2/canvas-grade-calculator" target="_blank">
-          <img class="github-img" alt="Github" data-fallback-filetype="png" src="assets/img/GitHub-Mark-32px.webp">
+          <img class="github-img" alt="Github" aria-label="Canvas Grade Calculator GitHub Link"
+               data-fallback-filetype="png"
+               src="assets/img/GitHub-Mark-32px.webp">
         </a>
       </div>
       <img class="card-img-top project-img"
-           alt="Canvas Grade Calculator" data-fallback-filetype="jpg" src="assets/img/CanvasGradeCalculator.webp"/>
+           alt="Canvas Grade Calculator" aria-label="Example of Canvas Grade Calculator use"
+           data-fallback-filetype="jpg"
+           src="assets/img/CanvasGradeCalculator.webp"/>
       <div class="card-body">
         A website built with Angular and Typescript to help students
         easily manage, calculate, and predict grades in classes that use Canvas LMS.
@@ -110,11 +126,15 @@
         </a>
         <a class="github-link"
            href="https://github.com/smartspot2/geo10-map-quiz" target="_blank">
-          <img class="github-img" alt="Github" data-fallback-filetype="png" src="assets/img/GitHub-Mark-32px.webp">
+          <img class="github-img" alt="Github" aria-label="GEOG10 Map Quiz GitHub Link"
+               data-fallback-filetype="png"
+               src="assets/img/GitHub-Mark-32px.webp">
         </a>
       </div>
       <img class="card-img-top project-img"
-           alt="GEOG0 Map Quiz" data-fallback-filetype="jpg" src="assets/img/Geo10MapQuiz.webp"/>
+           alt="GEOG10 Map Quiz" aria-label="Example of GEOG10 Map Quiz use"
+           data-fallback-filetype="jpg"
+           src="assets/img/Geo10MapQuiz.webp"/>
       <div class="card-body">
         A website built in vanilla HTML and JS, with manually edited SVG maps
         to help students in Berkeley's GEOG10 course with map quizzes of all continents and the world map.
@@ -131,12 +151,15 @@
         </span>
         <a class="github-link"
            href="https://github.com/smartspot2/sort-visualization" target="_blank">
-          <img class="github-img" alt="Github" data-fallback-filetype="png" src="assets/img/GitHub-Mark-32px.webp">
+          <img class="github-img" alt="Github" aria-label="Sorting Visualizer Github Link"
+               data-fallback-filetype="png"
+               src="assets/img/GitHub-Mark-32px.webp">
         </a>
       </div>
       <div id="sorting-visualizer-div" class="img-crop freezeframe">
         <img class="card-img-top project-img freezeframe-overlay"
-             alt="Sorting Visualizer" data-fallback-filetype="gif"
+             alt="Sorting Visualizer" aria-label="Sorting Visualizer Example"
+             data-fallback-filetype="gif"
              src="assets/img/RadixSortLSD_preview.webp"/>
         <img id="sorting-visualizer"
              class="card-img-top project-img freezeframe-gif"
@@ -159,7 +182,9 @@
         </a>
         <a class="github-link"
            href="https://github.com/smartspot2/tetris-ai" target="_blank">
-          <img class="github-img" alt="Github" data-fallback-filetype="png" src="assets/img/GitHub-Mark-32px.webp">
+          <img class="github-img" alt="Github" aria-label="Tetris AI GitHub Link"
+               data-fallback-filetype="png"
+               src="assets/img/GitHub-Mark-32px.webp">
         </a>
       </div>
       <img class="card-img-top project-img"
@@ -174,6 +199,11 @@
     </div>
   </div>
 </main>
+<footer class="footer bg-light">
+  <div class="container-sm container-scale">
+    Copyright &copy; 2021 Alec Li
+  </div>
+</footer>
 
 <!--  Handle gif freezing, email copying  -->
 <script src="js/utils.js"></script>
