--- a/teaching/index.html
+++ b/teaching/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Teaching</title>
   <link href="../favicon.ico" rel="icon"/>
 
   <!--  Bootstrap  -->
   <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
   <!--  Styles  -->
   <link href="../css/styles.css" rel="stylesheet"/>
@@ -22,14 +24,18 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand navbar-dark bg-dark sticky-top">
-  <div class="container-sm">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+  <div class="container-sm container-scale">
     <a class="navbar-brand">
-      <img class="nav-icon" alt="Phi" src="../assets/img/Phi-icon.png"/>
+      <img class="nav-icon" alt="Phi" data-fallback-filetype="png" src="../assets/img/Phi-icon.webp"/>
       <span class="nav-text">Alec Li</span>
     </a>
-    <div class="float-right">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 flex-row">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-right"
+            aria-controls="navbar-right" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div id="navbar-right" class="collapse navbar-collapse ms-auto">
+      <ul class="navbar-nav ms-auto mb-0 mb-sm-2">
         <li class="nav-item">
           <a class="nav-link" href="..">Home</a>
         </li>
@@ -48,11 +54,9 @@
     </div>
   </div>
 </nav>
-<main class="container-sm">
-  <h3>Teaching</h3>
-
+<main class="container-sm container-scale">
+  <h2>Teaching</h2>
   <h5>CSM 70</h5>
-
   <ul>
     <li>
       <b>Spring 2021:</b>
@@ -82,5 +86,10 @@
     </li>
   </ul>
 </main>
+<footer class="footer bg-light">
+  <div class="container-sm container-scale">
+    Copyright &copy; 2021 Alec Li
+  </div>
+</footer>
 </body>
 </html>
