Edit teaching description, add navbar collapse, update CS70 cheatsheet, reformat HTML

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>Teaching</title>
   <link href="../favicon.ico" rel="icon"/>
 
   <!--  Bootstrap  -->
-  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" rel="stylesheet">
+  <script crossorigin="anonymous" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 
   <!--  Styles  -->
   <link href="../css/styles.css" rel="stylesheet"/>
@@ -30,8 +32,8 @@
       <img class="nav-icon" alt="Phi" data-fallback-filetype="png" src="../assets/img/Phi-icon.webp"/>
       <span class="nav-text">Alec Li</span>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-right"
-            aria-controls="navbar-right" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" aria-controls="navbar-right" aria-expanded="false" aria-label="Toggle navigation"
+            data-bs-target="#navbar-right" data-bs-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div id="navbar-right" class="collapse navbar-collapse ms-auto">
@@ -56,10 +58,38 @@
 </nav>
 <main class="container-sm container-scale">
   <h2>Teaching</h2>
+  <h5>CS 70 uGSI</h5>
+  <ul>
+    <li>
+      <b>Summer 2021:</b>
+      <p>
+        As an undergraduate student instructor for CS70 in the summer,
+        I taught 4 one-hour discussion sections to groups of approximately 10 people,
+        and held 4 hours of office hours to students who had questions.
+        Additionally, I helped modify existing scripts to automatically create
+        homework <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>
+        templates for students to utilize.
+      </p>
+      <p>
+        Here are some extra problems I created along with a couple other TAs;
+        we released short practice worksheets every week as a "Problems of the Week".
+      </p>
+      <ul>
+        <li><a href="https://drive.google.com/drive/folders/1RIXfkqdfoozxExfSuv-xLfxCB3wdsjFm">
+          Problems of the Week
+        </a> (requires Berkeley email)
+        </li>
+      </ul>
+    </li>
+  </ul>
   <h5>CSM 70</h5>
   <ul>
     <li>
       <b>Spring 2021:</b>
+      <p>
+        As a mentor for UC Berkeley's Computer Science Mentors,
+        I led 2 one-hour small group tutoring sections every week for around 6 students.
+      </p>
       <p>
         Here are some supplemental documents I created for CSM 70 in Spring 2021.
         The CS70 course notes are excellent material to use just by themselves,
