--- a/coursework/latex.html
+++ b/coursework/latex.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>LaTeX</title>
   <link href="../favicon.ico" rel="icon"/>
 
   <!--  Bootstrap  -->
-  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" rel="stylesheet">
+  <script crossorigin="anonymous" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 
   <!--  Styles  -->
   <link href="../css/styles.css" rel="stylesheet"/>
@@ -30,8 +32,8 @@
       <img class="nav-icon" alt="Phi" data-fallback-filetype="png" src="../assets/img/Phi-icon.webp"/>
       <span class="nav-text">Alec Li</span>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-right"
-            aria-controls="navbar-right" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" aria-controls="navbar-right" aria-expanded="false" aria-label="Toggle navigation"
+            data-bs-target="#navbar-right" data-bs-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div id="navbar-right" class="collapse navbar-collapse ms-auto">
@@ -145,14 +147,14 @@
   <br>
   <div class="accordion">
     <div class="accordion-item">
-      <div class="accordion-header" id="preamble-documentation-header">
-        <button class="accordion-button collapsed" type="button"
-                data-bs-toggle="collapse" data-bs-target="#preamble-documentation"
-                aria-expanded="false" aria-controls="preamble-documentation">
+      <div id="preamble-documentation-header" class="accordion-header">
+        <button class="accordion-button collapsed" aria-controls="preamble-documentation"
+                aria-expanded="false" data-bs-target="#preamble-documentation"
+                data-bs-toggle="collapse" type="button">
           <h5>Documentation</h5>
         </button>
       </div>
-      <div class="accordion-collapse collapse" id="preamble-documentation"
+      <div id="preamble-documentation" class="accordion-collapse collapse"
            aria-labelledby="preamble-documentation-header" data-bs-parent="#preamble-documentation-header">
         <div class="accordion-body">
           <div id="preamble-flags">
