--- a/teaching/index.html
+++ b/teaching/index.html
@@ -28,8 +28,9 @@
 <body>
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
   <div class="container-sm container-scale">
-    <a class="navbar-brand">
-      <img class="nav-icon" alt="Phi" data-fallback-filetype="png" src="../assets/img/Phi-icon.webp"/>
+    <a class="navbar-brand" href="..">
+      <img class="nav-icon" alt="Phi" data-fallback-filetype="png"
+           draggable="false" src="../assets/img/Phi-icon.webp"/>
       <span class="nav-text">Alec Li</span>
     </a>
     <button class="navbar-toggler" aria-controls="navbar-right" aria-expanded="false" aria-label="Toggle navigation"
