Added link to physics-minimal package, updated preamble, updated EECS126 PDF

--- a/coursework/latex.html
+++ b/coursework/latex.html
@@ -108,8 +108,11 @@
   <hr>
   <h4>Custom Preamble</h4>
   <p>
-    <a href="../assets/latex/preamble.sty">Here</a> is a link to my current <code>preamble.sty</code> file.
-    It's always evolving as I typeset more, and I will periodically update the version on this page.
+    <a href="../assets/latex/preamble.sty">Here</a> is a link to my current <code>preamble.sty</code> file,
+    and <a href="../assets/latex/physics-minimal.sty">here</a> is a link to a minimal version of the
+    <code>physics</code> package that I compiled from the package sources, containing only the <code>\qty</code>
+    command and the modified math commands.
+    My preamble always evolving as I typeset more, and I will periodically update the version on this page.
   </p>
   <p>
     <b>Note:</b> it is not the best idea to use my preamble as-is, if you are looking for a long-term solution;
