--- a/coursework/latex.html
+++ b/coursework/latex.html
@@ -112,7 +112,7 @@
     and <a href="../assets/latex/physics-minimal.sty">here</a> is a link to a minimal version of the
     <code>physics</code> package that I compiled from the package sources, containing only the <code>\qty</code>
     command and the modified math commands.
-    My preamble always evolving as I typeset more, and I will periodically update the version on this page.
+    My preamble is always evolving as I typeset more, and I will periodically update the version on this page.
   </p>
   <p>
     <b>Note:</b> it is not the best idea to use my preamble as-is, if you are looking for a long-term solution;
