Add CS70 Fall 2020 Final, modify vendor prefixes

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -62,6 +62,27 @@
   <h5>CS 70 uGSI</h5>
   <ul>
     <li>
+      <b>Fall 2021:</b>
+      <p>
+        As a returning undergraduate student instructor for CS70 in the fall,
+        I taught 2 one-hour discussion sections to groups of 35-40 people,
+        and held 2 hours of office hours.
+      </p>
+      <p>
+        In some of my free time, I re-wrote (and re-typeset) the solutions
+        to the Fall 2020 Final, as the original were quite unclear and confusing to students
+        (from experience over the summer with students coming to my office hours).
+        Here is the link to the pdf:
+      </p>
+      <ul>
+        <li>
+          <a href="../assets/pdf/CS70_final_fa20_sol_rewritten.pdf" target="_blank">
+            CS70 Fall 2020 Final Solutions (Rewritten)
+          </a>
+        </li>
+      </ul>
+    </li>
+    <li>
       <b>Summer 2021:</b>
       <p>
         As an undergraduate student instructor for CS70 in the summer,
@@ -76,9 +97,10 @@
         we released short practice worksheets every week as a "Problems of the Week".
       </p>
       <ul>
-        <li><a href="https://drive.google.com/drive/folders/1RIXfkqdfoozxExfSuv-xLfxCB3wdsjFm">
-          Problems of the Week
-        </a> (requires Berkeley email)
+        <li>
+          <a href="https://drive.google.com/drive/folders/1RIXfkqdfoozxExfSuv-xLfxCB3wdsjFm" target="_blank">
+            Problems of the Week
+          </a> (requires Berkeley email)
         </li>
       </ul>
     </li>
