--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!--  Feature detection  -->
   <script src="js/modernizr.js"></script>
   <!--  Handle fallback with browsers that don't support webp  -->
-  <script defer src="js/convert_webp.js"></script>
+  <script src="js/convert_webp.js"></script>
 
   <!--  Masonry JS  -->
   <script async src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
