Add CS170 lecture notes

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -63,7 +63,9 @@
   <p>Below is a list of all the CS/math major courses I have taken at UC Berkeley:</p>
   <i>Fall 2021</i>
   <ul>
-    <li><b>CS 170</b>: Efficient Algorithms and Intractable Problems</li>
+    <li><b>CS 170</b>: Efficient Algorithms and Intractable Problems
+      (<a href="../assets/pdf/CS170_Lecture_Notes.pdf" target="_blank">lecture notes</a>)
+    </li>
     <li><b>EECS 127</b>: Optimization Models in Engineering</li>
     <li><b>MATH 104</b>: Introduction to Analysis</li>
     <li><b>MATH 110</b>: Linear Algebra</li>
