Add MATH110 lecture notes

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -68,7 +68,9 @@
     </li>
     <li><b>EECS 127</b>: Optimization Models in Engineering</li>
     <li><b>MATH 104</b>: Introduction to Analysis</li>
-    <li><b>MATH 110</b>: Linear Algebra</li>
+    <li><b>MATH 110</b>: Linear Algebra
+      (<a href="../assets/pdf/MATH110_Lecture_Notes.pdf" target="_blank">lecture notes</a>)
+    </li>
   </ul>
   <i>Summer 2021</i>
   <ul>
