--- a/teaching/index.html
+++ b/teaching/index.html
@@ -62,6 +62,22 @@
   <h5>CS 70 uGSI</h5>
   <ul>
     <li>
+      <b>Spring 2022:</b>
+      <p>
+        As a returning undergraduate student instructor for CS70 in the spring,
+        I continued to teach 2 one-hour discussion sections to groups of around 35 people.
+        This semester, I was also on the content team on course staff,
+        responsible for creating homeworks and discussion worksheets,
+        and creating additional problems for the course as well.
+        Further, I was also responsible for refactoring the
+        <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>
+        in the course notes; I made the source code more conventional,
+        while also typesetting new diagrams purely in
+        <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>
+        for the notes to increase clarity and cohesiveness.
+      </p>
+    </li>
+    <li>
       <b>Fall 2021:</b>
       <p>
         As a returning undergraduate student instructor for CS70 in the fall,
