--- a/coursework/index.html
+++ b/coursework/index.html
@@ -61,6 +61,12 @@
 <main class="container-sm container-scale">
   <h2>Coursework</h2>
   <p>Below is a list of all the CS/math major courses I have taken at UC Berkeley:</p>
+  <i>Spring 2022</i>
+  <ul>
+    <li><b>CS 162</b>: Operating Systems and Systems Programming</li>
+    <li><b>CS 189</b>: Introduction to Machine Learning</li>
+    <li><b>MATH 185</b>: Introduction to Complex Analysis</li>
+  </ul>
   <i>Fall 2021</i>
   <ul>
     <li><b>CS 170</b>: Efficient Algorithms and Intractable Problems
