Add CS189 lecture notes

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -64,7 +64,9 @@
   <i>Spring 2022</i>
   <ul>
     <li><b>CS 162</b>: Operating Systems and Systems Programming</li>
-    <li><b>CS 189</b>: Introduction to Machine Learning</li>
+    <li><b>CS 189</b>: Introduction to Machine Learning
+      (<a href="../assets/pdf/CS189_Lecture_Notes.pdf" target="_blank">lecture notes</a>)
+    </li>
     <li><b>MATH 185</b>: Introduction to Complex Analysis</li>
   </ul>
   <i>Fall 2021</i>
